--- a/Prepare/Frontend/scss/layout.scss
+++ b/Prepare/Frontend/scss/layout.scss
@@ -7,6 +7,7 @@
 @import "./components/loginForm";
 @import "./components/topNav";
 @import "./components/contents";
+@import "./components/userProfile";
 
 #__next {
   height: 100%;
