Add Images Zoom Component

--- a/Prepare/Frontend/scss/components/_postCard.scss
+++ b/Prepare/Frontend/scss/components/_postCard.scss
@@ -5,3 +5,13 @@
     background-color: transparent;
   }
 }
+
+.post-images-container {
+  
+  .rest-images {
+    display: inline-block;
+    width: 50%;
+    text-align: center;
+    vertical-align: middle;
+  }
+}
