--- a/Prepare/Frontend/scss/post.scss
+++ b/Prepare/Frontend/scss/post.scss
@@ -7,3 +7,4 @@
 @import "./components/postCard";
 @import "./components/postForm";
 @import "./components/commentForm";
+@import "./components/imageszoom";
