--- a/Prepare/Frontend/scss/post.scss
+++ b/Prepare/Frontend/scss/post.scss
@@ -8,3 +8,4 @@
 @import "./components/postForm";
 @import "./components/commentForm";
 @import "./components/imageszoom";
+@import "./components/postImages";
